--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <meta name=viewport content="width=device-width,initial-scale=1">
     <title>DevCamper APIs</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/firacode/6.2.0/fira_code.css"
+        integrity="sha512-LaxQmGd9k/pW51CsEy2nLIlbUXCgsyvUEVT5fSguN2b2OBwHjMi2aiUdEEXSMg8Jvy+bCB01as61aNrHnL2DYQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <div class=container-fluid>
         <div class=row>
             <div class="col-md-12 collection-intro">
